--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           <a href="#" style="font-family: 'Raleway';">Resources ▾</a>
           <div class="dropdown-menu">
             <ul>
-              <li><a href="#circle" style="font-family: 'Raleway';">Introduction</a></li>
-              <li><a href="#budget" style="font-family: 'Raleway';">Budgeting</a></li>
+              <li><a href="#budgeting" style="font-family: 'Raleway';">Budgeting</a></li>
+              <li><a href="#monetary" style="font-family: 'Raleway';">Monetary</a></li>
               <li>
-                <a href="#monetary" style="font-family: 'Raleway';">Monetary</a>
+                <a href="#insurance" style="font-family: 'Raleway';">Insurance</a>
                 <!-- <div class="dropdown-menu-1">
                   <ul>
                     <li><a href="#">Team-1</a></li>
@@ -41,7 +41,7 @@
                   </ul>
                 </div> -->
               </li>
-              <li><a href="stocks.html" style="font-family: 'Raleway';">Stock Market</a></li>
+              <li><a href="#stock" style="font-family: 'Raleway';">Stock Market</a></li>
             </ul>
           </div>
         </li>
@@ -50,65 +50,64 @@
     </div>
     <div class="circles" id="circle">
         <div class="block">
-             <img src="money.png" alt="" srcset="">
+             <a href="#budgeting"><img src="money.png" alt="" srcset=""></a>
              <h6 style="font-family: 'Raleway'; text-decoration: none;">BUDGETING</h6>
         </div>
         <div class="block">
-             <img src="bar-graph.png" alt="" srcset="">
+             <a href="#stock"><img src="bar-graph.png" alt="" srcset=""></a>
              <h6 style="font-family: 'Raleway'; text-decoration: none;">INVESTING</h6>
         </div>
         <div class="block">
-             <img src="atm-card.png" alt="" srcset="">
+             <a href="#monetary"><img src="atm-card.png" alt="" srcset=""></a>
              <h6 style="font-family: 'Raleway'; text-decoration: none;">CREDIT/DEBIT</h6>
         </div>
         <div class="block">
-             <img src="health-insurance.png" alt="" srcset="">
+             <a href="#insurance"><img src="health-insurance.png" alt="" srcset=""></a>
              <h6 style="font-family: 'Raleway'; text-decoration: none;">INSURANCE</h6>
         </div>
     </div>
     <div class="info">
-        <h1 style="font-family: 'Raleway'; text-decoration: none;">INTRODUCTION</h1>
+        <h1 style="font-family: 'Ubuntu'; text-decoration: none;">Welcoming You...</h1>
         
         <div id="lines">
             
         </div>
         <div class="introduction">
-            <p class="para">
+            <p class="para" style="word-spacing: 10px; font-size: 25px;">
                 Learning about the finance sector provides a deep understanding of how money, investments, and financial systems drive the global economy. It equips individuals with the knowledge to make informed financial decisions, analyze markets, and manage risks effectively. Studying finance fosters critical thinking, analytical, and problem-solving skills essential for careers in banking, investment, and corporate finance. It also helps learners understand economic trends, financial instruments, and the impact of global events on markets. As technology reshapes financial services through innovations like fintech and digital banking, finance education becomes even more valuable for developing future-ready professionals who can navigate an evolving financial landscape.
             </p>
         </div>
     </div>
-    <section class="budget-section" >
-        <div class="budget-text" id="budget">
-            <h1 style="font-family: 'Raleway'; text-decoration: none;">Budgeting</h1>
-            <p>Budgeting means tracking your income and expenses so you can spend smartly and save wisely. It’s about how you divide your income based on your needs and wants. Here we help you understand how to divide your income effectively.</p>
+<section class="budgeting-section" id="budgeting">
+  <div class="budgeting-text" >
+    <h1 style="font-family: 'Raleway'; text-decoration: none;">Budgeting</h1>
+    <p>
+      Budgeting refers to the process of creating a plan to spend your money wisely. It helps you balance your income and expenses, save for future goals, and avoid unnecessary debt.
+    </p>
+    <p>
+      <b>Budgeting in India:</b> The Government of India prepares an annual budget that outlines estimated revenues and expenditures for the upcoming financial year. It plays a crucial role in maintaining financial discipline and economic growth.
+    </p>
 
-            <h2 style="font-family: 'Raleway'; text-decoration: none;">Advantages</h2>
-            <ul>
-                <li>Prevents overspending: You know where your money goes.</li>
-                <li>Helps plan savings for emergencies or goals.</li>
-                <li>Keeps you in control of your finances.</li>
-                <li>Guides how much to invest each month.</li>
-            </ul>
+    <ul>
+      <li>The Union Budget is presented every year by the Finance Minister in Parliament, usually in February.</li>
+      <li>It includes two main parts — the Revenue Budget and the Capital Budget.</li>
+      <li>The Revenue Budget covers government income (like taxes) and expenses (like subsidies and salaries).</li>
+      <li>The Capital Budget deals with investments, loans, and infrastructure development.</li>
+      <li>Personal budgeting helps individuals manage spending, save, and invest effectively.</li>
+    </ul>
+  </div>
 
-            <h2 style="font-family: 'Raleway'; text-decoration: none;">How can you...</h2>
-            <ul>
-                <li><b>50/30/20 Rule:</b> 50% needs, 30% wants, 20% savings/investments.</li>
-                <li>Every rupee you earn is assigned a purpose — nothing goes unplanned.</li>
-                <li>Keep cash for different categories in separate envelopes to control spending.</li>
-            </ul>
-        </div>
+  <div class="budgeting-image">
+    <img src="budgeting.avif" alt="Budget Planning Graph">
+  </div>
+</section>
 
-        <div class="budget-image">
-            <img src="pexels-photo-6901511.jpeg" alt="Indian currency notes">
-        </div>
-  </section>
-  <section class="monetary-section">
+  <section class="monetary-section" id="monetary">
     <div class="monetary-image">
       <img src="65a98b1e20ff24e6ca12821554c80f0b.jpg" alt="Indian Monetary Growth Graph">
     </div>
 
-    <div class="monetary-text" id="monetary">
+    <div class="monetary-text" >
       <h1 style="font-family: 'Raleway'; text-decoration: none;">Monetary System</h1>
       <p>
         The monetary system of a country refers to the framework through which money is created, managed, 
@@ -129,6 +128,64 @@
       </ul>
     </div>
   </section>
+  <section class="insurance-section" id="insurance">
+  <div class="insurance-text" >
+    <h1 style="font-family: 'Raleway'; text-decoration: none;">Insurance System</h1>
+    <p>
+      The insurance system provides financial protection against unexpected losses or risks.
+      It works on the principle of risk pooling — where many people pay small premiums so that
+      the few who face loss are compensated.
+    </p>
+    <p>
+      <b>Insurance System in India:</b> India has a well-regulated insurance market governed by
+      the <b>Insurance Regulatory and Development Authority of India (IRDAI)</b>. It ensures the
+      stability, transparency, and security of insurance companies and protects policyholders’ interests.
+    </p>
+    <ul>
+      <li>Insurance provides a safety net for individuals and businesses during financial hardships.</li>
+      <li>There are two major types — <b>Life Insurance</b> and <b>General Insurance</b>.</li>
+      <li>Life Insurance covers death or maturity benefits; General Insurance covers health, motor, property, etc.</li>
+      <li>IRDAI, established in 1999, supervises and promotes fair practices in the insurance sector.</li>
+      <li>Popular public insurers include LIC, New India Assurance, and Oriental Insurance.</li>
+    </ul>
+  </div>
+
+  <div class="insurance-image">
+    <img src="insurance.jpeg" alt="Insurance Protection Graphic">
+  </div>
+</section>
+
+<section class="stock-section" id="stock">
+  <div class="stock-image">
+    <img src="stock-photo-investing-the-stock-market.jpeg" alt="Indian Stock Market Graph">
+  </div>
+
+  <div class="stock-text" >
+    <h1 style="font-family: 'Raleway'; text-decoration: none;">Stock Market</h1>
+    <p>
+      The <b>stock market</b> is a platform where investors buy and sell ownership shares of companies, 
+      also known as <b>stocks</b>. It helps businesses raise capital and allows investors to earn profits 
+      through share price appreciation and dividends.
+    </p>
+
+    <p>
+      <b>Stock Market in India:</b> India’s stock market is among the largest in the world, driven by 
+      exchanges like the <b>BSE (Bombay Stock Exchange)</b> and <b>NSE (National Stock Exchange)</b>. 
+      These exchanges list thousands of companies and provide a transparent system for trading.
+      <a href="stocks.html" class="stock-learn">Learn More</a>
+    </p>
+
+    <ul>
+      <li>Major stock indices are <b>SENSEX</b> (BSE) and <b>NIFTY 50</b> (NSE).</li>
+      <li>Investors earn through <b>capital gains</b> (price rise) and <b>dividends</b>.</li>
+      <li>Trading can be short-term (trading) or long-term (investing).</li>
+      <li>Market prices depend on demand, company performance, and investor sentiment.</li>
+      <li>Digital platforms like Zerodha, Groww, and Upstox make investing easier for everyone.</li>
+    </ul>
+  </div>
+</section>
+
+
   
 <section class="hero" id="about">
   <h2>Meet the Minds Behind the Project</h2>
