--- a/stocks.html
+++ b/stocks.html
@@ -422,7 +422,7 @@ It monitors brokers, mutual funds, and listed companies to prevent fraud and ins
 Through constant reforms and digital initiatives, SEBI builds trust and promotes long-term market stability.</p></div>
   </div>
   <div class="image-gallery">
-    <img src="https://images.pexels.com/photos/210607/pexels-photo-210607.jpeg" alt="Trading Floor" />
+    <img src="data 1.jpg" alt="Trading Floor" />
     <img src="https://images.pexels.com/photos/210742/pexels-photo-210742.jpeg" alt="Stock Exchange Building" />
   </div>
 </section>
@@ -433,7 +433,7 @@ Through constant reforms and digital initiatives, SEBI builds trust and promotes
 Trading takes place in real time through brokers and secure online platforms, allowing millions of investors to buy and sell within seconds. Every transaction is closely monitored and regulated by SEBI (Securities and Exchange Board of India) to maintain fairness, prevent manipulation, and protect investor interests. The system ensures transparency, efficiency, and trust — the pillars that make India's equity market one of the fastest-growing in the world.</p>
   <div class="image-gallery">
     <img src="https://images.pexels.com/photos/590022/pexels-photo-590022.jpeg" alt="Online Trading" />
-    <img src="https://images.pexels.com/photos/210607/pexels-photo-210607.jpeg" alt="Stock Analysis" />
+    <img src="data 2.jpg" alt="Stock Analysis" />
   </div>
 </section>
 <section>
@@ -468,7 +468,7 @@ Trading takes place in real time through brokers and secure online platforms, al
     <div class="card"><h4>Risks</h4><p>Market volatility, changing interest rates, and government policy shifts can significantly impact stock performance. Sudden global events, inflation trends, or geopolitical tensions can also trigger short-term market swings. To navigate these uncertainties, diversification is essential — spreading investments across sectors, asset classes, and time horizons helps reduce risk and balance potential losses with gains.</p></div>
   </div>
   <div class="image-gallery">
-    <img src="https://images.pexels.com/photos/210607/pexels-photo-210607.jpeg" alt="Investor Planning" />
+    <img src="data 3.webp" alt="Investor Planning" />
     <img src="https://images.pexels.com/photos/590016/pexels-photo-590016.jpeg" alt="Stock Graph" />
   </div>
 </section>
