--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
              <h6 style="font-family: 'Raleway'; text-decoration: none;">INSURANCE</h6>
         </div>
     </div>
-    <div class="info">
+    <!-- <div class="info">
         <h1 style="font-family: 'Ubuntu'; text-decoration: none;">Welcoming You...</h1>
         
         <div id="lines">
@@ -77,7 +77,7 @@
                 Learning about the finance sector provides a deep understanding of how money, investments, and financial systems drive the global economy. It equips individuals with the knowledge to make informed financial decisions, analyze markets, and manage risks effectively. Studying finance fosters critical thinking, analytical, and problem-solving skills essential for careers in banking, investment, and corporate finance. It also helps learners understand economic trends, financial instruments, and the impact of global events on markets. As technology reshapes financial services through innovations like fintech and digital banking, finance education becomes even more valuable for developing future-ready professionals who can navigate an evolving financial landscape.
             </p>
         </div>
-    </div>
+    </div> -->
 <section class="budgeting-section" id="budgeting">
   <div class="budgeting-text" >
     <h1 style="font-family: 'Raleway'; text-decoration: none;">Budgeting</h1>
@@ -246,130 +246,6 @@
     </div>
   </div>
 </section>
-  
-
-    <!-- <div class="box-container">
-        <div class="display">
-            <div class="box">
-                <h3>Financial Security</h3>
-                <p>Financial literacy empowers you to make informed decisions about savings in PPF/EPF, investing in mutual funds, and protecting assets through insurance. Understanding money management in the Indian context reduces stress and builds a safety net for life's uncertainties</p>
-            </div>
-            <div class="box">
-                <h3>Wealth Building</h3>
-                <p>Knowledge of compound interest through SIPs, tax-saving instruments under Section 80C, and smart investment in Indian markets enables wealth accumulation. Understanding schemes like NPS, Sukanya Samriddhi, and ELSS creates long-term prosperity.</p>
-            </div>
-        </div>
-        <div class="display">
-            <div class="box">
-                <h3>Financial Inclusion</h3>
-                <p>Jan Dhan Yojana has opened 48+ crore bank accounts, but true inclusion means understanding banking, insurance, pensions, and digital payments. Breaking barriers ensures every Indian, from rural to urban areas, can access and utilize financial services effectively.</p>
-            </div>
-            <div class="box">
-                <h3>Generational Impact</h3>
-                <p>Financial literacy creates lasting change in Indian families. Understanding money management, government schemes, and investment options helps break poverty cycles. Teaching children about savings, responsible spending, and long-term planning builds generational wealth.</p>
-            </div>
-        </div>
-    </div>
-    <div class="box-container" style="background-color: #001; padding: 5px 0px;">
-        <div class="header">
-            <h1 class="typewriter" style="margin-right: 10px;color: red" >Essential</h1>
-            <h1>Financial Topics</h1>
-        </div>
-        <p style="font-size: 150%; font-family: 'Ubuntu';">Master the core pillars of financial literacy with our comprehensive curriculum</p>
-        <div class="display">
-            <div class="box">
-                <h3>Budgeting Basics</h3>
-                <p>Master the 50/30/20 rule adapted for Indian households, zero-based budgeting, and envelope methods. Learn to track expenses using UPI statements, identify spending patterns, and create a realistic budget that adapts to your income. Discover Indian budgeting apps like Walnut, ET Money, and Money View.</p>
-            </div>
-            <div class="box">
-                <h3>Smart Saving</h3>
-                <p>Build an emergency fund covering 6-12 months of expenses in high-interest savings accounts. Learn about Recurring Deposits (RD), Fixed Deposits (FD), Post Office Savings Schemes, and Sukanya Samriddhi Yojana. Understand automatic savings through SIPs and sweep-in accounts in Indian banks like SBI, HDFC, and ICICI.</p>
-            </div>
-            <div class="box">
-                <h3>Investing</h3>
-                <p>Understand NSE/BSE stocks, government bonds, mutual funds (equity, debt, hybrid), and ELSS. Learn about SIP (Systematic Investment Plan), asset allocation, and the power of rupee-cost averaging. Explore tax-saving investments under Section 80C including PPF, EPF, and NPS.</p>
-            </div>
-        </div>
-        <div class="display">
-            <div class="box">
-                <h3>Credit Management</h3>
-                <p>Understand CIBIL score (300-900 range), credit utilization ratio, and payment history impact. Learn strategies to improve credit scores with CIBIL, Experian India, and Equifax. Use credit cards wisely, manage EMIs, and understand the difference between secured and unsecured loans from Indian banks.</p>
-            </div>
-            <div class="box">
-                <h3>Home Ownership</h3>
-                <p>Navigate the Indian home buying process including RERA compliance, property registration, and stamp duty. Understand home loan options from banks and HFCs (Housing Finance Companies), interest rates, and tax benefits under Section 24(b) and 80EE. Learn about PMAY (Pradhan Mantri Awas Yojana) subsidies.</p>
-            </div>
-            <div class="box">
-                <h3>Financial Planning</h3>
-                <p>Create a comprehensive plan covering retirement (EPF, PPF, NPS), education savings for children, insurance needs (term, health, ULIP), and will/nomination basics. Learn about tax-saving strategies under Sections 80C, 80D, 80CCD(1B), and understand new vs old tax regime implications.</p>
-            </div>
-        </div>
-    </div>
-    <div class="data">
-        <div class="header">
-            <h1>Financial</h1>
-            <h1 class="typewriter" style="margin: 0 10px;color: red; font-family: 'Ubuntu';" >Inclusion</h1>
-            <h1>For all</h1>
-        </div>
-        <p style="font-family: 'Raleway';max-width: 900px; text-align: center;">Breaking down barriers and creating equal opportunities for everyone to access financial education and services, regardless of background, location, or circumstance.</p>
-        <div class="display">
-            <div class="box">
-                <h1 style="font-family: 'Ubuntu';">19 Cr</h1>
-                <h4 style="font-family: 'Raleway';">Unbanked Indians</h4>
-                <p>Still lack access to formal banking services despite Jan Dhan</p>
-            </div>
-            <div class="box">
-                <h1 style="font-family: 'Ubuntu';">27%</h1>
-                <h4 style="font-family: 'Raleway';">Financial Literacy</h4>
-                <p>Only 27% of Indian adults are financially literate</p>
-            </div>
-            <div class="box">
-                <h1 style="font-family: 'Ubuntu';">48 Cr +</h1>
-                <h4 style="font-family: 'Raleway';">Jan Dhan Accounts</h4>
-                <p>Opened but many remain inactive or underutilized</p>
-            </div>
-        </div>
-    </div>
-    <div class="commitment">
-        <div class="header">
-            <h2>Our </h2>
-            <h2 style="color: red; margin-left: 10px;">Goal</h2>
-        </div>
-        <div class="display">
-            <div class="box">
-               <h3>Pan-India Access</h3>
-               <p>Financial education will be accessible across all 28 states and 8 union territories. Will be available in Hindi, English, Tamil, Telugu, Bengali, Marathi, Gujarati, Kannada, Malayalam, and more regional languages, ensuring no Indian is left behind.</p> 
-            </div>
-            <div class="box">
-                <h3>Inclusive Design for Bharat</h3>
-                <p>Built for all Indians - from metro cities to rural villages. Supports low-bandwidth connections, works on basic smartphones, and respects diverse literacy levels with visual aids and voice-based learning options.</p>
-            </div>
-            <div class="box">
-                <h3>Culturally Relevant Content</h3>
-                <p>Content addressing unique Indian contexts - joint family finances, agricultural income management, festival savings, women's financial independence, and navigating government schemes like PMJDY, PMJJBY, and APY</p>
-            </div>
-        </div>
-    </div>
-    <div id="header">
-        <h3>About</h3>
-        <h3 style="color: red;margin-left: 10px;">us</h3>    
-    </div>
-    <div class="us">
-        <div class="ishan">
-            <img src="p15.jpg" alt="Ishan Vishwajeet">
-            <div class="box">
-                <h1>Ishan </h1>
-                <h6 style="font-family: 'Raleway';">Hi there, I am Ishan Vishwajeet, Owner and Developer of this website. Hope you are enjoying and learning.</h6>
-            </div>
-        </div>
-        <div class="neeraj">
-            <img src="6627869.webp" alt="Neeraj Yadav">
-            <div class="box">
-                <h1>Neeraj Yadav</h1>
-                <h6 style="font-family: 'Raleway';">Hi there, I am Neeraj, Co-Owner and Developer of this website. Hope you are enjoying and learning.</h6>
-            </div>
-        </div>
-    </div> -->
     <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.96/build/spline-viewer.js"></script>
     <script src="script.js"></script>
 
